--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -32,7 +32,7 @@ makedepends=('extra-cmake-modules'
 
 
 source+=("https://github.com/calamares/calamares/releases/download/v${pkgver}/calamares-${pkgver}.tar.gz"
-         git+https://github.com/NorcuxOS/calamares-configs#branch=master)
+         git+https://github.com/SquareOS/calamares#branch=master)
 
 sha256sums=('SKIP'
             'SKIP')
